--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1189,3 +1189,11 @@ h6,.h6 {
 .container-fluid {
   padding: 20px;
 }
+/***********************************************************************************************************************
+* 图表
+************************************************************************************************************************/
+.echart-line {
+  width: 100%;
+  height: 600px;
+  background: #FFF;
+}
