initial performance analysis completed

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -614,6 +614,13 @@ $column_num : 24;//24列
 }
 
 /***********************************************************************************************************************
+* 通用工具
+************************************************************************************************************************/
+.ui-pointer {
+  cursor: pointer;
+}
+
+/***********************************************************************************************************************
 * 浮动
 ************************************************************************************************************************/
 .ui-l{
