--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1204,6 +1204,11 @@ h6,.h6 {
   height: 600px;
   background: #FFF;
 }
+.echart-pie {
+  width: 100%;
+  height: 600px;
+  background: #FFF;
+}
 /***********************************************************************************************************************
 * 标签
 ************************************************************************************************************************/
